p2/config/k3s_objects/app2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2
  labels:
    app: app2
spec:
  selector:
    app: app2
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  labels:
    app: app2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: paulbouwer/hello-kubernetes:1.10
          imagePullPolicy: Always
          resources:
            limits:
              memory: "64Mi"
              cpu: "100m"
          ports:
            - containerPort: 8080
              name: http
